[package]
name = "presciidoc"
version = "0.3.0"
edition = "2021"
description = "Preprocessing AsciiDoc for other tools."
authors = ["Marek Suchánek <marek.suchanek@protonmail.com>"]
license = "Apache-2.0"
# Check the Rust version using `cargo msrv verify`.
rust-version = "1.67"
#documentation = "https://docs.rs/presciidoc"
readme = "README.md"
repository = "https://github.com/msuchane/presciidoc/"
categories = ["command-line-utilities", "text-processing"]
keywords = ["asciidoc", "documentation", "RedHat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9", features = ["derive", "bright-color"]}
regex = "1.10"
log = "0.4"
simplelog = "0.12"
# Disable support for tracing_error and SpanTrace in eyre
color-eyre = { version = "0.6", default-features = false }
once_cell = "1.18"

[build-dependencies]
bpaf = { version = "0.9", features = ["derive", "docgen"]}
time = "0.3"
